# FastAPI-Boilerplate

./: .env.bak  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README_CN.md  add_is_active_column.py  check_routes.py  config.yaml  debug_app.py  docker-compose.yml  main.py  nohup.out  pyproject.toml  scripts.ps1  tatus  test_middleware.py  test_rate_limiter.py
.claude/: settings.local.json
api/v1/: __init__.py
api/v1/tasks/: tasks.py
api/v1/test/: __init__.py  pagination_demo.py  rate_limit.py  test.py
api/v1/users/: users.py
app/api/v1/: __init__.py
app/common/: __init__.py  dataclasses.py  enums.py  model.py  pagination.py  queue.py  schema.py  timezone.py  utils.py
app/controllers/: auth.py  task.py  user.py
app/core/: __init__.py  api_versioning.py  config.py  logging.py  register.py  server.py
app/core/cache/: __init__.py  cache_monitor.py  cache_stats.py  cache_warmer.py  custom_key_maker.py  enhanced_cache_manager.py  redis_backend.py
app/core/exceptions/: business_exceptions.py  handler.py
app/core/factory/: factory.py
app/core/middlewares/: access_middleware.py  authentication.py  opera_log_middleware.py  sqlalchemy.py
app/core/security/: encryption.py  jwt.py  password.py
app/core/utils/: __init__.py  health_check.py  request_parse.py  snowflake.py
app/db/: init_db.py  memory_limiter.py  session.py  transactional.py
app/db/mixins/: timestamp.py
app/models/: __init__.py  api_key.py  base.py  chat.py  opera_log.py  task.py  user.py
app/repositories/: __init__.py  api_key.py  base.py  base_imports.py  chat_conversation.py  chat_message.py  task.py  user.py
app/schemas/: api_key.py  base.py
app/schemas/extras/: current_user.py  health.py  oauth.py
app/schemas/requests/: chat.py  ragflow.py  tasks.py  users.py
app/schemas/responses/: chat.py  ragflow.py  tasks.py  users.py
app/services/: __init__.py  api_key.py  auth.py  base.py  chat.py  ragflow.py  task.py  user.py
app/static/login/: index.html  script.js  styles.css
app/worker/: __init__.py  celery_worker.py
core/: config.py  log.py  register.py  server.py
core/cache/: cache_monitor.py  cache_stats.py  cache_warmer.py  enhanced_cache_manager.py  redis_backend.py
core/common/: context.py  dataclasses.py  enums.py  model.py  response_code.py  schema.py  timezone.py  utils.py
core/controller/: base.py
core/database/: memory_limiter.py  redis.py  session.py
core/exceptions/: __init__.py  base.py  handler.py
core/factory/: factory.py
core/fastapi/dependencies/: current_user.py  permissions.py
core/fastapi/middlewares/: access_middleware.py  authentication.py  opera_log_middleware.py  response_logger.py
core/models/: __init__.py  base.py
core/permissions/: __init__.py  base.py
core/repository/: base.py
core/security/: access_control.py  jwt.py
core/utils/: health_check.py  request_parse.py  snowflake.py
docs/: api-key-encryption-migration.md  css-troubleshooting.md  database-design-id-uuid.md  fix-css-issue.md  fix-summary.md  frontend-backend-setup.md  login-page-redesign.md  migration-to-uuid.md  react-login-redesign.md  uuid-migration-test-results.md  后端代码冗余分析报告.md  测试模块优化总结.md  缓存模块优化总结.md  项目优化报告.md
docs/examples/: __init__.py  pagination_demo.py
migrations/: env.py
migrations/versions/: 20230205035620_initial_models.py  20251120105430_add_api_keys.py  20251124_migrate_to_uuid_primary_key.py  20251202_add_chat_history.py  20251202_add_chat_message_sources.py
scripts/: generate_jwt_key.py  migrate_api_key_to_encrypted.sql  migrate_api_keys_data.py  test-css.html
tests/: conftest.py  enhanced_test_data.py  test_api_versioning.py  test_cache_integration.py  test_exception_handling.py  test_fixtures.py
tests/api/: conftest.py  overrides.py
tests/api/v1/: test_api_keys.py
tests/utils/: login.py
web/: .env  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/lib/: api.ts
worker/: __init__.py
(+21 files in other folders)
