[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = [{name = "zhanggc", email = "zhanggc2018@qq.com"}]
dependencies = [
    "alembic>=1.9.4",
    "SQLAlchemy>=2.0.4",
    "PyJWT>=2.6.0",
    "uvicorn>=0.37.0",
    "fastapi>=0.119.0",
    "celery>=5.5.3",
    "gunicorn>=23.0.0",
    "fastapi-event>=0.1.3",
    "ujson>=5.7.0",
    "click>=8.1.3",
    "greenlet>=3.0.0",
    "redis>=4.5.4",
    "pydantic>=2.12.1",
    "pydantic-settings>=2.11.0",
    "isort>=7.0.0",
    "black>=25.9.0",
    "pylint>=4.0.0",
    "asyncpg>=0.27.0",
    "pytest>=8.4.2",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "email-validator>=2.3.0",
    "python-jose>=3.5.0",
    "cryptography>=46.0.2",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
    "faker>=37.11.0",
    "pytest-asyncio>=1.2.0",
    "behave>=1.3.3"
]
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "behave>=1.3.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "app*", "core*", "worker*", "migrations*"]

[tool.uv]
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Pyright 配置
[tool.pyright]
# 关闭类型检查
typeCheckingMode = "off"

# Ruff 常用检验规则
[tool.ruff]
# 行长度限制
line-length = 120
# 目标 Python 版本
target-version = "py311"
# 保存时自动修复
fix = true
# 自动修复不安全的修复
unsafe-fixes = true

# 格式化设置
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
